Fix style and add pessimistic locking